Complete patient management CRUD